# django_react_stack

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: node.js.yml
backend/: manage.py
backend/django_react_stack/: asgi.py  settings.py  urls.py  wsgi.py
backend/frontend/: urls.py  views.py
frontend/: package.json
gunicorn/: gunicorn.conf.py  gunicorn.service  gunicorn.sh  nginx.conf
scripts/: 40-run.sh  50-nginx.sh
